--- a/src/app/components/historialCobranza/historialCobranza.html
+++ b/src/app/components/historialCobranza/historialCobranza.html
@@ -1,62 +1,64 @@
 <div layout-padding>
-  <form name="proyectForm">
-    <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
-      <div>
-        <div layout-xs="column">
-          <div flex>
-            <h1 layout-align="center center" layout="column">Historial de Cobranza</h1>
-            <div layout="row" layout-xs="column">
-              <div flex>
-                <md-checkbox class="md-warn md-align-top-left" flex>
-                  La más atrasada
-                </md-checkbox>
-              </div>
-              <div flex>
-                <md-checkbox class="md-warn md-align-top-left">
-                  Todo
-                </md-checkbox>
-              </div>
+  <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
+    <div layout-padding>
+      <div layout-xs="column">
+        <div flex>
+          <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
+            <div>
+              <h2>Historial de Cobranza</h2>
+            </div>
+          </div>
+          <div layout="row" layout-xs="column">
+            <div flex>
+              <md-checkbox class="md-warn md-align-top-left" flex>
+                La más atrasada
+              </md-checkbox>
+            </div>
+            <div flex>
+              <md-checkbox class="md-warn md-align-top-left">
+                Todo
+              </md-checkbox>
             </div>
           </div>
         </div>
       </div>
-    </div><br>
-    <div layout-xs="column" flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond table borde">
-      <md-table-container>
-        <table md-table>
-          <thead md-head>
-            <tr md-row>
-              <th md-column md-numeric><span>Año</span></th>
-              <th md-column md-numeric><span>Mes</span></th>
-              <th md-column md-numeric><span>L. Anterior</span></th>
-              <th md-column md-numeric><span>L. Actual</span></th>
-              <th md-column md-numeric><span>Consumo</span></th>
-              <th md-column md-numeric><span>Subsidio</span></th>
-              <th md-column md-numeric><span>Suma Mes</span></th>
-              <th md-column md-numeric><span>Estado</span></th>
-              <th md-column md-numeric><span>Cargo Fijo</span></th>
-              <th md-column md-numeric><span>Alcantarillado</span></th>
-              <th md-column md-numeric><span>Nro Cobranza</span></th>
-            </tr>
-          </thead>
-          <tbody md-body>
-            <tr md-row class="tabla">
-              <td md-cell>2017</td>
-              <td md-cell>Noviembre</td>
-              <td md-cell>143234</td>
-              <td md-cell>132453</td>
-              <td md-cell>20000</td>
-              <td md-cell>22000</td>
-              <td md-cell>35000</td>
-              <td md-cell>Sin Pagar</td>
-              <td md-cell>10000</td>
-              <td md-cell>12345</td>
-              <td md-cell>0000001</td>
-            </tr>
-          </tbody>
-        </table>
-      </md-table-container>
-      <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>
     </div>
-  </form>
+  </div><br>
+  <div layout-xs="column" flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond">
+    <md-table-container>
+      <table md-table>
+        <thead md-head>
+          <tr md-row>
+            <th md-column md-numeric><span>Año</span></th>
+            <th md-column md-numeric><span>Mes</span></th>
+            <th md-column md-numeric><span>L. Anterior</span></th>
+            <th md-column md-numeric><span>L. Actual</span></th>
+            <th md-column md-numeric><span>Consumo</span></th>
+            <th md-column md-numeric><span>Subsidio</span></th>
+            <th md-column md-numeric><span>Suma Mes</span></th>
+            <th md-column md-numeric><span>Estado</span></th>
+            <th md-column md-numeric><span>Cargo Fijo</span></th>
+            <th md-column md-numeric><span>Alcantarillado</span></th>
+            <th md-column md-numeric><span>Nro Cobranza</span></th>
+          </tr>
+        </thead>
+        <tbody md-body>
+          <tr md-row class="tabla">
+            <td md-cell>2017</td>
+            <td md-cell>Noviembre</td>
+            <td md-cell>143234</td>
+            <td md-cell>132453</td>
+            <td md-cell>20000</td>
+            <td md-cell>22000</td>
+            <td md-cell>35000</td>
+            <td md-cell>Sin Pagar</td>
+            <td md-cell>10000</td>
+            <td md-cell>12345</td>
+            <td md-cell>0000001</td>
+          </tr>
+        </tbody>
+      </table>
+    </md-table-container>
+    <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>
+  </div>
 </div>
