--- a/src/app/components/registro/registro.html
+++ b/src/app/components/registro/registro.html
@@ -1,112 +1,112 @@
 <div layout-padding>
-  <form name="projectForm">
-    <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="fond mar">
-      <div class="borde" flex>
-        <div layout-xs="column">
-          <div flex>
-            <center>
-              <h2>Registro Clientes</h2>
-            </center>
-            <md-input-container class="md-icon-float md-block">
-              <label>RUT</label>
-              <md-icon md-svg-src="/assets/img/usuario.svg" class="name"></md-icon>
-              <input ng-model="rut" type="text">
-            </md-input-container>
-          </div>
+  <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="fond mar">
+    <div layout-padding flex layout="column">
+      <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
+        <div>
+          <h2>Registro Clientes</h2>
         </div>
-        <div layout-xs="column">
-          <div flex>
-            <md-input-container md-no-float class="md-block">
-              <label>Nombre Social</label>
-              <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
-              <input ng-model="nombre" type="text">
-            </md-input-container>
-          </div>
-        </div>
-        <div layout-xs="column">
-          <div flex>
-            <div layout="row" layout-xs="column">
-              <div flex>
-                <md-input-container md-no-float class="md-block">
-                  <label>Apellido Paterno</label>
-                  <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
-                  <input ng-model="apellidop" type="text">
-                </md-input-container>
-              </div>
-              <div flex>
-                <md-input-container md-no-float class="md-block">
-                  <label>Apellido Materno</label>
-                  <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
-                  <input ng-model="apellidom" type="text">
-                </md-input-container>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div layout-xs="column">
-          <div flex>
-            <md-input-container md-no-float class="md-block">
-              <label>Domicilio</label>
-              <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
-              <input ng-model="title" type="text">
-            </md-input-container>
-          </div>
-        </div>
-        <div layout-xs="column">
-          <div flex>
-            <div layout="row" layout-xs="column">
-              <div flex flex-xs="100">
-                <md-input-container class="md-block" flex-gt-sm>
-                <label>% Subsidio</label>
-                  <md-select ng-model="user.state">
-                    <md-option></md-option>
-                  </md-select>
-                </md-input-container>
-              </div>
-              <div flex flex-xs="100">
-                <md-input-container>
-                  <label>Date</label>
-                  <md-datepicker ng-model="user.submissionDate"></md-datepicker>
-                </md-input-container>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div layout-xs="column" class="marg">
-          <div flex>
-            <div layout="row" layout-xs="column">
-              <div flex>
-                <md-input-container class="md-block" flex-gt-sm>
-                <label>Region</label>
-                <md-icon md-svg-src="/assets/img/marca.svg"></md-icon>
-                  <md-select ng-model="user.state">
-                    <md-option></md-option>
-                  </md-select>
-                </md-input-container>
-              </div>
-              <div flex>
-                <md-input-container class="md-block" flex-gt-sm>
-                <label>Ciudad/Zona</label>
-                <md-icon md-svg-src="/assets/img/ciudad.svg"></md-icon>
-                  <md-select ng-model="user.state">
-                    <md-option></md-option>
-                  </md-select>
-                </md-input-container>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div flex layout-xs="column">
-          <center>
-            <md-button class="md-raised marg" md-colors="{background: 'Red'}" layout-fill style="min-height: 50px;">Registrarme</md-button>
-          </center>
-        </div>
-        <div layout-xs="column" class="marg">
-          <md-checkbox name="tos" ng-model="button" required>
-            Aceptos terminos de uso
-          </md-checkbox>
-        </div>  
       </div>
+      <div layout-xs="column">
+        <div flex>
+          <md-input-container class="md-icon-float md-block">
+            <label>RUT</label>
+            <md-icon md-svg-src="/assets/img/usuario.svg" class="name"></md-icon>
+            <input ng-model="rut" type="text">
+          </md-input-container>
+        </div>
+      </div>
+      <div layout-xs="column">
+        <div flex>
+          <md-input-container md-no-float class="md-block">
+            <label>Nombre Social</label>
+            <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
+            <input ng-model="nombre" type="text">
+          </md-input-container>
+        </div>
+      </div>
+      <div layout-xs="column">
+        <div>
+          <div layout="row" layout-xs="column">
+            <div flex>
+              <md-input-container md-no-float class="md-block">
+                <label>Apellido Paterno</label>
+                <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
+                <input ng-model="apellidop" type="text">
+              </md-input-container>
+            </div>
+            <div flex>
+              <md-input-container md-no-float class="md-block">
+                <label>Apellido Materno</label>
+                <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
+                <input ng-model="apellidom" type="text">
+              </md-input-container>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div layout-xs="column">
+        <div flex>
+          <md-input-container md-no-float class="md-block">
+            <label>Domicilio</label>
+            <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
+            <input ng-model="title" type="text">
+          </md-input-container>
+        </div>
+      </div>
+      <div layout-xs="column">
+        <div flex>
+          <div layout="row" layout-xs="column">
+            <div flex flex-xs="100">
+              <md-input-container class="md-block" flex-gt-sm>
+              <label>% Subsidio</label>
+                <md-select ng-model="user.state">
+                  <md-option></md-option>
+                </md-select>
+              </md-input-container>
+            </div>
+            <div flex flex-xs="100">
+              <md-input-container>
+                <label>Date</label>
+                <md-datepicker ng-model="user.submissionDate"></md-datepicker>
+              </md-input-container>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div layout-xs="column">
+        <div flex>
+          <div layout="row" layout-xs="column">
+            <div flex>
+              <md-input-container class="md-block" flex-gt-sm>
+              <label>Region</label>
+              <md-icon md-svg-src="/assets/img/marca.svg"></md-icon>
+                <md-select ng-model="user.state">
+                  <md-option></md-option>
+                </md-select>
+              </md-input-container>
+            </div>
+            <div flex>
+              <md-input-container class="md-block" flex-gt-sm>
+              <label>Ciudad/Zona</label>
+              <md-icon md-svg-src="/assets/img/ciudad.svg"></md-icon>
+                <md-select ng-model="user.state">
+                  <md-option></md-option>
+                </md-select>
+              </md-input-container>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div flex layout-xs="column">
+        <center>
+          <md-button class="md-raised" md-colors="{background: 'Red'}" layout-fill style="min-height: 50px;">Registrarme</md-button>
+        </center>
+      </div>
+      <div layout-xs="column" layout-padding>
+        <md-checkbox name="tos" ng-model="button" required>
+          Aceptos terminos de uso
+        </md-checkbox>
+      </div>  
     </div>
-  </form>
+  </div>
 </div>
