--- a/src/app/components/tabla/tabla.html
+++ b/src/app/components/tabla/tabla.html
@@ -1,9 +1,9 @@
 <div layout-padding>
   <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
     <div flex flex-xs="90" flex-offset-xs="5">
-      <center>
+      <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
         <h2>Buscar Cliente</h2>
-      </center>
+      </div>  
       <div flex layout="row">
         <div flex="30" flex-offset="30" flex-xs="60" flex-offset-xs="10"> 
           <md-input-container>
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond table borde">
+  <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond">
     <md-table-container>
       <table md-table md-row-select multiple md-progress="promise">
         <thead md-head md-order="query.order" md-on-reorder="getDesserts">
